2017-09-19  Richard Biener  <rguenther@suse.de>

PR tree-optimization/69728
	* graphite-sese-to-poly.c (schedule_error): New global.
	(add_loop_schedule): Handle empty domain by failing the
	schedule.
	(build_original_schedule): Handle schedule_error.

	* gfortran.dg/graphite/pr69728.f90: New testcase.
	* gcc.dg/graphite/pr69728.c: Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@252968 138bc75d-0d04-0410-961f-82ee72b054a4